# VDI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dapper  Dockerfile.dapper1461511226  Makefile  README.md  go.mod  go.sum  main.go
.codegraph/: daemon.pid
deploy/: env-config.sh  hosts  hosts.template
deploy/discovery/: install.sh  server.py  vdi-discovery.service
deploy/k8s/: README.md  config.yaml  deploy.sh  download-kk.sh  inventory.yaml  inventory.yaml.template
deploy/kagent/: deploy-agents.sh
deploy/kube-ovn/: deploy.sh  values.yaml
deploy/kube-vip/: deploy-kube-vip.sh  kube-vip.yaml
deploy/kubevirt/: deploy.sh
deploy/longhorn/: deploy.sh  values.yaml
docs/: build-env.md  build-pipeline.md  云桌面产品技术架构图.md
iso-builder/: .gitignore  CLAUDE.md  Dockerfile.dapper  Makefile  QUICK-TEST.md  README.md  TESTING.md  manifest.yaml
iso-builder/configs/: env-config.sh  preseed.cfg
iso-builder/offline/: manifest.yaml
iso-builder/pxe/: dnsmasq.conf.template  start-pxe.sh
iso-builder/scripts/: build-iso  build-iso-lb  common.sh  create-live  download-binaries  download-charts  download-images  download-manifests  download-packages  download-resources  entry  generate-iso  generate-manifest  integrate-offline  integrate-tui  load-offline-images  qemu-screenshot.sh  quick-test-boot.sh  setup-local-repo  test-qemu-boot.sh  verify-iso-boot.sh  verify-offline-pack
iso-builder/tests/: test_config_generator.py  test_discovery_server.py  test_offline.sh  test_pxe.sh  test_tui.sh  test_tui_functional.py
kagent/: .editorconfig  .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md
kagent/.github/: labeler.yml  (+2 more)
kagent/python/samples/crewai/poem_flow/: Dockerfile  README.md  agent.yaml  pyproject.toml
kagent/python/samples/crewai/poem_flow/src/poem_flow/: agent-card.json  main.py
kagent/python/samples/crewai/poem_flow/src/poem_flow/crews/poem_crew/config/: agents.yaml
kagent/python/samples/crewai/research-crew/: Dockerfile  README.md  agent.yaml  pyproject.toml
kagent/python/samples/crewai/research-crew/src/research_crew/: agent-card.json  crew.py  main.py
kagent/python/samples/crewai/research-crew/src/research_crew/config/: agents.yaml  tasks.yaml
kagent/python/samples/langgraph/currency/: Dockerfile  README.md  agent.yaml  pyproject.toml
kagent/python/samples/langgraph/currency/currency/: agent-card.json  agent.py  cli.py
kagent/python/samples/langgraph/hitl-tools/: Dockerfile  agent.yaml  pyproject.toml
kagent/python/samples/langgraph/hitl-tools/hitl_tools/: agent-card.json  agent.py  cli.py
kagent/python/samples/langgraph/kebab/: Dockerfile  agent.yaml  pyproject.toml
kagent/python/samples/langgraph/kebab/kebab/: agent-card.json  agent.py  cli.py
kagent/python/samples/openai/basic_agent/: .gitignore  Dockerfile  agent.yaml  pyproject.toml
kagent/python/samples/openai/basic_agent/basic_agent/: __init__.py  agent-card.json  agent.py
scripts/: build  build-bclinux-base  build-bundle  check-deps  ci  default  fetch-deps  install-tools.sh  package-vdi-installer  package-vdi-iso  package-vdi-os  package-vdi-repo  qemu-test  qemu-test-ks  shell  test  version  version-kagent  version-kubeovn  version-kubevirt  version-longhorn  version-rke2
(+1239 files in other folders)
