[project]
name = "hitl-tools"
version = "0.1.0"
description = "LangGraph agent demonstrating HITL tool approval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagent-langgraph",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith[otel]>=0.4.30",
]

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
hitl-tools = "hitl_tools.cli:main"

[tool.uv.sources]
kagent-langgraph = { workspace = true }
