[project]
name = "basic-openai-agent"
version = "0.1.0"
description = "Basic OpenAI Agent sample for KAgent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagent-openai",
    "openai-agents>=0.4.0",
    "uvicorn>=0.20.0",
]

[tool.uv.sources]
kagent-openai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basic_agent"]

